<resources>
    <string name="app_name">Calculadora</string>
    <string name="boton0">0</string>
    <string name="boton1">1</string>
    <string name="boton2">2</string>
    <string name="boton3">3</string>
    <string name="boton4">4</string>
    <string name="boton5">5</string>
    <string name="boton6">6</string>
    <string name="boton7">7</string>
    <string name="boton8">8</string>
    <string name="boton9">8</string>
    <string name="botonMas">+</string>
    <string name="botonMenos">-</string>
    <string name="botonMultiplicar">*</string>
    <string name="botonDividir">/</string>
    <string name="botonIgual">=</string>
    <string name="botonComa">.</string>
    <string name="botonOFF">OFF</string>
    <string name="botonC">C</string>
</resources>
